updated upload screen and added buttons for next screens

--- a/Detail.storyboard
+++ b/Detail.storyboard
@@ -114,7 +114,7 @@
         <!--View Controller-->
         <scene sceneID="afE-dz-OnJ">
             <objects>
-                <viewController id="xZR-0T-PHi" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="foundUpload" id="xZR-0T-PHi" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="evc-cr-T9s"/>
                         <viewControllerLayoutGuide type="bottom" id="8gA-RO-0dU"/>
@@ -222,7 +222,7 @@
         <!--View Controller-->
         <scene sceneID="lbt-pR-LUn">
             <objects>
-                <viewController id="nSY-Hv-h02" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="madeUpload" id="nSY-Hv-h02" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="XOh-WS-ghe"/>
                         <viewControllerLayoutGuide type="bottom" id="GU0-ng-rJr"/>
