--- a/MakersFinders_Master/Base.lproj/Main.storyboard
+++ b/MakersFinders_Master/Base.lproj/Main.storyboard
@@ -57,18 +57,13 @@
                                         <rect key="frame" x="20" y="200" width="280" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GMV-mF-Zb2">
-                                                <rect key="frame" x="100" y="0.0" width="80" height="30"/>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Login" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udD-R2-vGM">
+                                                <rect key="frame" x="119" y="4" width="43" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                                <state key="normal" title="Login">
-                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="loginTapped:" destination="JvK-LW-sN6" eventType="touchUpInside" id="lZG-Gf-eMd"/>
-                                                </connections>
-                                            </button>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
@@ -339,71 +334,86 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MqU-nN-KzS">
-                                <rect key="frame" x="0.0" y="149" width="320" height="200"/>
+                                <rect key="frame" x="0.0" y="169" width="320" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s7j-wL-Tlm">
-                                        <rect key="frame" x="32" y="64" width="100" height="100"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s7j-wL-Tlm">
+                                        <rect key="frame" x="25" y="50" width="120" height="120"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="hammer.png" translatesAutoresizingMaskIntoConstraints="NO" id="unR-cd-Vod">
-                                                <rect key="frame" x="28" y="23" width="56" height="56"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hammer.png" translatesAutoresizingMaskIntoConstraints="NO" id="unR-cd-Vod">
+                                                <rect key="frame" x="35" y="35" width="50" height="50"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="0kx-s7-zJK"/>
+                                                    <constraint firstAttribute="width" constant="50" id="Sfw-u4-4Y8"/>
+                                                </constraints>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="UbG-05-bgs"/>
-                                            <constraint firstAttribute="width" constant="100" id="dOD-n8-R1C"/>
+                                            <constraint firstAttribute="width" constant="120" id="6Hv-L5-Yn0"/>
+                                            <constraint firstAttribute="height" constant="120" id="l2Q-s7-mXt"/>
+                                            <constraint firstAttribute="centerX" secondItem="unR-cd-Vod" secondAttribute="centerX" id="oR9-NJ-ds1"/>
+                                            <constraint firstAttribute="centerY" secondItem="unR-cd-Vod" secondAttribute="centerY" id="r6w-Ia-I6A"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WzH-ud-tg4">
-                                        <rect key="frame" x="181" y="64" width="100" height="100"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WzH-ud-tg4">
+                                        <rect key="frame" x="175" y="50" width="120" height="120"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="found.png" translatesAutoresizingMaskIntoConstraints="NO" id="hdH-bS-7Il">
-                                                <rect key="frame" x="19" y="26" width="67" height="47"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="found.png" translatesAutoresizingMaskIntoConstraints="NO" id="hdH-bS-7Il">
+                                                <rect key="frame" x="30" y="36" width="60" height="50"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="60" id="13d-hW-csC"/>
+                                                    <constraint firstAttribute="height" constant="50" id="vMT-fg-p1s"/>
+                                                </constraints>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="RLz-WU-bDe"/>
-                                            <constraint firstAttribute="width" constant="100" id="khO-Kg-hwI"/>
+                                            <constraint firstAttribute="centerY" secondItem="hdH-bS-7Il" secondAttribute="centerY" constant="-0.5" id="0kU-hq-RHi"/>
+                                            <constraint firstAttribute="height" constant="120" id="RLz-WU-bDe"/>
+                                            <constraint firstAttribute="width" constant="120" id="khO-Kg-hwI"/>
+                                            <constraint firstAttribute="centerX" secondItem="hdH-bS-7Il" secondAttribute="centerX" constant="0.5" id="uE2-Rk-hW5"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="I made this" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9k-Nb-Ork">
-                                        <rect key="frame" x="32" y="167" width="100" height="28"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I made this" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9k-Nb-Ork">
+                                        <rect key="frame" x="25" y="179" width="120" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="I found this" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVV-2e-ord">
-                                        <rect key="frame" x="181" y="167" width="100" height="30"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I found this" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVV-2e-ord">
+                                        <rect key="frame" x="175" y="179" width="120" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="What would you like to upload?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Moz-9A-hJF">
-                                        <rect key="frame" x="0.0" y="7" width="320" height="21"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What would you like to upload?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Moz-9A-hJF">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="centerY" secondItem="WzH-ud-tg4" secondAttribute="centerY" constant="-10" id="0LK-Up-0Xg"/>
+                                    <constraint firstItem="m9k-Nb-Ork" firstAttribute="leading" secondItem="MqU-nN-KzS" secondAttribute="leading" constant="25" id="16s-NE-qSw"/>
                                     <constraint firstAttribute="trailing" secondItem="WzH-ud-tg4" secondAttribute="trailing" constant="25" id="3JS-LU-hjI"/>
                                     <constraint firstAttribute="height" constant="200" id="7Z2-eS-35F"/>
-                                    <constraint firstItem="m9k-Nb-Ork" firstAttribute="width" secondItem="aVV-2e-ord" secondAttribute="width" id="7ck-RR-2px"/>
                                     <constraint firstItem="Moz-9A-hJF" firstAttribute="leading" secondItem="MqU-nN-KzS" secondAttribute="leading" id="7rB-2e-SCa"/>
                                     <constraint firstAttribute="trailing" secondItem="Moz-9A-hJF" secondAttribute="trailing" id="EBP-I1-Q3I"/>
                                     <constraint firstAttribute="bottom" secondItem="aVV-2e-ord" secondAttribute="bottom" id="LCP-if-c1w"/>
-                                    <constraint firstAttribute="centerY" secondItem="WzH-ud-tg4" secondAttribute="centerY" constant="-14" id="Lze-nI-jbm"/>
                                     <constraint firstItem="s7j-wL-Tlm" firstAttribute="leading" secondItem="MqU-nN-KzS" secondAttribute="leading" constant="25" id="MEw-Hc-Vef"/>
+                                    <constraint firstAttribute="trailing" secondItem="aVV-2e-ord" secondAttribute="trailing" constant="25" id="X3d-0f-tGn"/>
                                     <constraint firstItem="Moz-9A-hJF" firstAttribute="top" secondItem="MqU-nN-KzS" secondAttribute="top" id="acn-hj-B3y"/>
-                                    <constraint firstAttribute="centerY" secondItem="s7j-wL-Tlm" secondAttribute="centerY" constant="-14" id="nVv-ai-an0"/>
+                                    <constraint firstItem="m9k-Nb-Ork" firstAttribute="width" secondItem="s7j-wL-Tlm" secondAttribute="width" id="lrN-AA-JfW"/>
+                                    <constraint firstItem="WzH-ud-tg4" firstAttribute="width" secondItem="aVV-2e-ord" secondAttribute="width" id="wbS-Xg-aYg"/>
+                                    <constraint firstAttribute="centerY" secondItem="s7j-wL-Tlm" secondAttribute="centerY" constant="-10" id="ykr-Ry-JAR"/>
                                     <constraint firstAttribute="bottom" secondItem="m9k-Nb-Ork" secondAttribute="bottom" id="zyJ-qD-V4G"/>
                                 </constraints>
                             </view>
@@ -412,7 +422,7 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="MqU-nN-KzS" secondAttribute="trailing" id="LHS-gD-YAB"/>
                             <constraint firstItem="MqU-nN-KzS" firstAttribute="leading" secondItem="kj6-9e-dkk" secondAttribute="leading" id="Yzx-Us-ope"/>
-                            <constraint firstAttribute="centerY" secondItem="MqU-nN-KzS" secondAttribute="centerY" constant="35" id="e09-em-B6q"/>
+                            <constraint firstAttribute="centerY" secondItem="MqU-nN-KzS" secondAttribute="centerY" constant="15" id="uZd-0e-CsN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="IXe-mc-A22"/>
