--- a/MakersFinders_Master/Base.lproj/Main.storyboard
+++ b/MakersFinders_Master/Base.lproj/Main.storyboard
@@ -463,9 +463,8 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="centerY" secondItem="RBA-Ok-TRe" secondAttribute="centerY" id="0Ka-qk-X5F"/>
-                                                <constraint firstAttribute="bottom" secondItem="uEI-qx-cS1" secondAttribute="bottom" id="4Zw-2u-4QC"/>
                                                 <constraint firstItem="RBA-Ok-TRe" firstAttribute="leading" secondItem="uEI-qx-cS1" secondAttribute="trailing" constant="20" id="5Jh-An-yEZ"/>
-                                                <constraint firstItem="uEI-qx-cS1" firstAttribute="top" secondItem="R26-nN-6Ix" secondAttribute="top" id="Qib-Vi-GsB"/>
+                                                <constraint firstAttribute="centerY" secondItem="uEI-qx-cS1" secondAttribute="centerY" constant="-0.5" id="RrH-6o-gu3"/>
                                                 <constraint firstItem="uEI-qx-cS1" firstAttribute="leading" secondItem="R26-nN-6Ix" secondAttribute="leading" id="XMO-Ty-AHT"/>
                                             </constraints>
                                         </tableViewCellContentView>
